--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,10 +4,10 @@
     <title>Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./assets/fonts/fontawesome-webfont.woff2">
-    <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/util.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/fonts/fontawesome-webfont.woff2}">
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/util.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/main.css}">
     <meta name="robots" content="noindex, follow">
     <script
             nonce="e44b0730-58cd-4d00-bda4-291f0e375406">(function (w, d) {
