--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -388,7 +388,7 @@
                         <div class="home_banner_style1 one">
                             <h3>miniboots</h3>
                             <div class="banner_text_img">
-                                <p>new arrival</p>
+                                <p>Sản phẩm mới</p>
                                 <img src="assets/img/bg/banner_static1.png" alt="">
                             </div>
                         </div>
@@ -397,9 +397,9 @@
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <div class="single_banner ">
                         <div class="home_banner_style1 two">
-                            <h3>T-shirts</h3>
+                            <h3>Áo sơ mi</h3>
                             <div class="banner_text_img">
-                                <p>new arrival</p>
+                                <p>Hàng mới về</p>
                                 <img src="assets/img/bg/banner_static2.png" alt="">
                             </div>
                         </div>
@@ -408,9 +408,9 @@
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <div class="single_banner ">
                         <div class="home_banner_style1 three">
-                            <h3>jewelry</h3>
+                            <h3>Trang sức</h3>
                             <div class="banner_text_img">
-                                <p>new arrival</p>
+                                <p>Hàng mới về</p>
                                 <img src="assets/img/bg/banner_static3.png" alt="">
                             </div>
                         </div>
@@ -431,19 +431,19 @@
                             <li>
                                 <a class="active" data-bs-toggle="tab" href="#arrival" role="tab"
                                    aria-controls="arrival" aria-selected="true">
-                                    New Arrival
+                                    Hàng mới về
                                 </a>
                             </li>
                             <li>
                                 <a data-bs-toggle="tab" href="#bestseller" role="tab" aria-controls="bestseller"
                                    aria-selected="false">
-                                    Bestseller
+                                    Bán chạy nhất
                                 </a>
                             </li>
                             <li>
                                 <a data-bs-toggle="tab" href="#featured" role="tab" aria-controls="featured"
                                    aria-selected="false">
-                                    Featured Products
+                                    Sản phẩm nội bật
                                 </a>
                             </li>
                         </ul>
