--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -186,9 +186,8 @@
                                 </a>
                             </div>
                             <div class="mini_cart_wrapper">
-                                <a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                                <a th:href="@{/cart}"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                     <span class="cartitems"> Giỏ hàng</span>
-                                    <span class="item_count">2</span>
                                 </a>
                             </div>
                         </div>
@@ -287,65 +286,6 @@
             </div>
         </div>
     </div>
-    <!--mini cart-->
-    <div class="mini_cart">
-        <div class="cart_gallery">
-            <div class="cart_close">
-                <div class="cart_text">
-                    <h3>cart</h3>
-                </div>
-                <div class="mini_cart_close">
-                    <a href="javascript:void(0)"><i class="ion-android-close"></i></a>
-                </div>
-            </div>
-            <div class="cart_item">
-                <div class="cart_img">
-                    <a href="#"><img src="assets/img/s-product/product.jpg" alt=""></a>
-                </div>
-                <div class="cart_info">
-                    <a href="#">Juicy Couture Tricot</a>
-                    <p>1 x <span> $30.00 </span></p>
-                </div>
-                <div class="cart_remove">
-                    <a href="#"><i class="ion-ios-close-outline"></i></a>
-                </div>
-            </div>
-            <div class="cart_item">
-                <div class="cart_img">
-                    <a href="#"><img src="assets/img/s-product/product2.jpg" alt=""></a>
-                </div>
-                <div class="cart_info">
-                    <a href="#">Juicy Couture Juicy</a>
-                    <p>1 x <span> $29.00 </span></p>
-                </div>
-                <div class="cart_remove">
-                    <a href="#"><i class="ion-ios-close-outline"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="mini_cart_table">
-            <div class="cart_table_border">
-                <div class="cart_total">
-                    <span>Sub total:</span>
-                    <span class="price">$125.00</span>
-                </div>
-                <div class="cart_total mt-10">
-                    <span>total:</span>
-                    <span class="price">$125.00</span>
-                </div>
-            </div>
-        </div>
-        <div class="mini_cart_footer">
-            <div class="cart_button">
-                <a href="cart.html"><i class="fa fa-shopping-cart"></i> View cart</a>
-            </div>
-            <div class="cart_button">
-                <a class="active" href="checkout.html"><i class="fa fa-sign-in"></i> Checkout</a>
-            </div>
-
-        </div>
-    </div>
-    <!--mini cart end-->
 </header>
 <!--header area end-->
 
