insert cart from hat product

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -447,9 +447,8 @@
                                                             class="custom-price"></span>đ</span>
                                                 </div>
                                                 <div class="add_to_cart">
-                                                    <a href="cart.html" title="Add to cart"><i
-                                                            class="fa fa-shopping-cart" aria-hidden="true"></i> Add
-                                                        to cart</a>
+                                                    <a th:href="@{/}" title="Add to cart"><i
+                                                            class="fa fa-shopping-cart" aria-hidden="true"></i> Thêm giỏ hàng</a>
                                                 </div>
                                             </figcaption>
                                         </figure>
@@ -1108,8 +1107,7 @@
                                                 </div>
                                                 <div class="add_to_cart">
                                                     <a href="cart.html" title="Add to cart"><i
-                                                            class="fa fa-shopping-cart" aria-hidden="true"></i> Add
-                                                        to cart</a>
+                                                            class="fa fa-shopping-cart" aria-hidden="true"></i> Thêm giỏ hàng</a>
                                                 </div>
                                             </figcaption>
                                         </figure>
@@ -1174,9 +1172,7 @@
                                                             class="custom-price"></span>đ</span>
                                                 </div>
                                                 <div class="add_to_cart">
-                                                    <a href="cart.html" title="Add to cart"><i
-                                                            class="fa fa-shopping-cart" aria-hidden="true"></i> Add
-                                                        to cart</a>
+                                                    <a th:href="@{'/create-cart?productId=' + ${productHat.productsId}}" title="Add to cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Thêm giỏ hàng</a>
                                                 </div>
                                             </figcaption>
                                         </figure>
@@ -1245,8 +1241,7 @@
                                     </div>
                                     <div class="add_to_cart">
                                         <a href="cart.html" title="Add to cart"><i class="fa fa-shopping-cart"
-                                                                                   aria-hidden="true"></i> Add
-                                            to cart</a>
+                                                                                   aria-hidden="true"></i> Thêm giỏ hàng</a>
                                     </div>
                                 </figcaption>
                             </figure>
