update cart for full product

--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -3261,7 +3261,7 @@ textarea:-ms-input-placeholder {
 }
 .img-detail{
     width: 100%;
-    height: auto;
+    height: 500px;
     object-fit: cover;
 }
 
