--- a/src/main/resources/templates/productDetail.html
+++ b/src/main/resources/templates/productDetail.html
@@ -448,9 +448,7 @@
                                                 class="custom-price"></span>đ</span>
                                     </div>
                                     <div class="add_to_cart">
-                                        <a href="cart.html" title="Add to cart"><i class="fa fa-shopping-cart"
-                                                                                   aria-hidden="true"></i> Add
-                                            to cart</a>
+                                        <a th:href="@{'/create-cart?productId=' + ${product.productsId}}" title="Add to cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Thêm giỏ hàng</a>
                                     </div>
                                 </figcaption>
                             </figure>
@@ -844,7 +842,7 @@
                                     <div class="modal_add_to_cart">
                                         <form action="#">
                                             <input min="1" max="100" step="2" value="1" type="number">
-                                            <button type="submit">add to cart</button>
+                                            <button type="submit">Thêm giỏ hàng</button>
                                         </form>
                                     </div>
                                 </div>
