--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -390,9 +390,7 @@
                                                     class="custom-price"></span>đ</span>
                                         </div>
                                         <div class="add_to_cart">
-                                            <a href="cart.html" title="Add to cart"><i class="fa fa-shopping-cart"
-                                                                                       aria-hidden="true"></i> Add
-                                                to cart</a>
+                                            <a th:href="@{'/create-cart?productId=' + ${product.productsId}}" title="Add to cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Thêm giỏ hàng</a>
                                         </div>
                                     </figcaption>
                                 </figure>
